--- a/.env.example
+++ b/.env.example
@@ -45,7 +45,12 @@ PRIORITY_FEE_MICROLAMPORTS=50000
 # --- Safety Thresholds ---
 # Minimum USD liquidity required before buying a token
 MIN_LIQUIDITY_USD=10000
-# Minimum market cap in USD
-MIN_MARKET_CAP_USD=1000000
-# Maximum market cap in USD
-MAX_MARKET_CAP_USD=50000000
+
+# --- Market Cap Ranges ---
+# DISCOVERY: For finding past winners to identify smart wallets ($1M-$50M)
+DISCOVERY_MIN_MCAP_USD=1000000
+DISCOVERY_MAX_MCAP_USD=50000000
+# COPY TRADING: For following smart wallets into new tokens
+# Low floor because smart wallets buy early ($50K+). Liquidity check protects us.
+MIN_COPY_TRADE_MCAP_USD=50000
+MAX_COPY_TRADE_MCAP_USD=100000000
