Rebrand to Rome Agent Trader + Mozaic-inspired dashboard overhaul
- Rename all references from Solana Copy Trading Bot to Rome Agent Trader
- Database file renamed to rome_agent.db
- Complete dashboard redesign: parchment background, Cinzel/Cormorant fonts, gold accents
- Splash screen with clock-face ring, avatar, and "Enter Rome" CTA
- Ambient music from audio file, subtle click/hover sounds
- Large faint profile watermark background (inverted outline effect)
- Glassmorphism cards, fade-up animations, parallax effects
- Music toggle with animated equalizer bars

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # =============================================================================
-# Solana Copy Trading Bot — Environment Variables
+# Rome Agent Trader — Environment Variables
 # =============================================================================
 # Copy this file to .env and fill in your values:
 #   cp .env.example .env
