--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # =============================================================================
-# Solana Copy Trading Bot — Dependencies
+# Rome Agent Trader — Dependencies
 # =============================================================================
 
 # --- Core ---
